// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loaders > stepAFPAccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepSamtykkeOffentligAFPAccessGuard > Når brukeren har uføretrygd og har valgt ja_offentlig til spørsmål om afp, er hen redirigert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepSamtykkeOffentligAFPAccessGuard > Når brukeren ikke har uføretrygd og har valgt afp nei, er hen redirigert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepSamtykkeOffentligAFPAccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepSivilstandAccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepStartAccessGuard > kaller getPersonQuery, getLoependeVedtakQuery, getInntekt, getOmstillingsstoenadOgGjenlevende og getEkskludertStatus og returnerer en defered response med getPerson og en redirect url 1`] = `
DeferredData {
  "abortPromise": Promise {},
  "controller": AbortController {
    Symbol(SameObject caches): {
      "signal": AbortSignal {},
    },
  },
  "data": {
    "getLoependeVedtakQuery": Promise {},
    "getPersonQuery": Promise {},
    "shouldRedirectTo": Promise {},
  },
  "deferredKeys": [
    "getPersonQuery",
    "getLoependeVedtakQuery",
    "shouldRedirectTo",
  ],
  "init": {},
  "pendingKeysSet": Set {},
  "subscribers": Set {},
  "unlistenAbortSignal": [Function],
}
`;

exports[`Loaders > stepUfoeretrygdAFPAccessGuard > Gitt at brukeren har uføretrygd,  > Når hen er fylt minimum uttaksalder, er hen redirigert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke-offentlig-afp",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke-offentlig-afp",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepUfoeretrygdAFPAccessGuard > Når brukeren ikke har uføretrygd, er hen redirigert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke-offentlig-afp",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/samtykke-offentlig-afp",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > stepUfoeretrygdAFPAccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;
